--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ code {
   flex: 1;
   flex-direction: column;
   align-items: center;
-  padding: 5%;
+  padding: 15px 50px 50px 10px;
 }
 /* unvisited link */
 a:link {
