--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,8 @@ code {
   color: white;
   display: flex;
   flex-direction: column;
-  margin-left: 5%;
+  margin-left: 1%;
+  margin-right: 1%;
   
 }
 .note-area {
