--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,8 @@ code {
 }
 .convert-button {
   margin-left: 30%;
-  background-color: #fbf665;
-  background-image: linear-gradient(160deg, #fbf665 0%, #ff6e27 100%);
+  background-color: #f4ec04;
+  background-image: linear-gradient(160deg, #fbcd02 0%, #ff6e27 100%);
   color: white;
   text-shadow: #383e65 1px 1px 1px;
   border: white 2px solid;
