--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h2 {
+  text-shadow: 2px 2px 4px #383e65;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -16,9 +20,11 @@ code {
 .news-feed {
   display: flex;
   flex-direction: column;
-  text-shadow: #383e65 1px 1px 1px;
+  text-shadow: #383e65 1px 1px 2px;
   color: white;
   padding: 2%;
+  margin-left: 2%;
+  border-radius: 16px;
   background-color: #ff6e27;
   background-image: linear-gradient(180deg, #fbf665 0%, #ff6e27 100%); 
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -34,6 +40,8 @@ code {
   text-shadow: #383e65 1px 1px 1px;
   color: white;
   padding: 5%;
+  margin-left: 1%;
+  border-radius: 16px;
   background-color: #6287f8;
   background-image: linear-gradient(180deg, #6287f8 0%, #383e65 100%);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -181,4 +189,19 @@ button:hover {
   color: yellow;
   text-shadow: #000 1px 1px 1px;
 
+}
+/* added 5-28-22*/
+.bottom-radious {
+  border-radius: 0px 0px 40px 40px;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.d-col {
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
