--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,12 @@ h2 {
   text-shadow: 2px 2px 4px #383e65;
 }
 
+h3 {
+  color: white;
+  text-shadow: 1px 1px 1px #383e65;
+
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -26,7 +32,7 @@ code {
   margin-left: 2%;
   border-radius: 16px;
   background-color: #ff6e27;
-  background-image: linear-gradient(180deg, #fbf665 0%, #ff6e27 100%); 
+  background-image: linear-gradient(180deg, #d3cd0f 0%, #ff6e27 100%); 
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
 
@@ -93,17 +99,18 @@ code {
 a:link {
   /* color: #fbf665; */
   color: white;
+  text-decoration: none;
 }
 
 /* visited link */
 a:visited {
-  color: #73fffe;
+  color: #2649c5;
   /* color: #ff6e27; */
 }
 
 /* mouse over link */
 a:hover {
-  color: #fbf665;
+  color: #4c4b1f;
 }
 
 /* selected link */
@@ -186,8 +193,8 @@ button:hover {
 
   padding: 0 2rem;
   font-size: 2rem;
-  color: yellow;
-  text-shadow: #000 1px 1px 1px;
+  color: #d3cd0f;
+  text-shadow: #00000018 1px 1px 1px;
 
 }
 /* added 5-28-22*/
