--- a/src/index copy.css
+++ b/src/index copy.css
@@ -1,7 +1,7 @@
 
 
 body { 
-  background-color: #1c1b20 ;
+  background-color: #383e65;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,13 +10,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 h2 {
-  text-shadow: 1px 1px 2px #383e65;
+  text-shadow: 2px 2px 4px #383e65;
 }
 
 h3 {
-  /* color: white; */
+  color: white;
   text-shadow: 1px 1px 1px #383e65;
 
 }
@@ -36,8 +35,8 @@ code {
   padding: 2%;
   margin-left: 2%;
   border-radius: 16px;
-  background-color: #f3c130 ;
-  /* background-image: linear-gradient(180deg, #d3cd0f 0%, #ff6e27 100%);  */
+  background-color: #ff6e27;
+  background-image: linear-gradient(180deg, #d3cd0f 0%, #ff6e27 100%); 
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
 
@@ -52,10 +51,9 @@ code {
   color: white;
   padding: 5%;
   margin-left: 1%;
-  margin-right: 2%;
   border-radius: 16px;
-  background-color: #414a6b ;
-  /* background-image: linear-gradient(180deg, #6287f8 0%, #383e65 100%); */
+  background-color: #6287f8;
+  background-image: linear-gradient(180deg, #6287f8 0%, #383e65 100%);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
 
@@ -75,11 +73,11 @@ code {
 }
 .convert-button {
   margin-left: 30%;
-  background-color: #f3c130 ;
-  /* background-image: linear-gradient(160deg, #fbcd02 0%, #ff6e27 100%); */
+  background-color: #f4ec04;
+  background-image: linear-gradient(160deg, #fbcd02 0%, #ff6e27 100%);
   color: white;
   text-shadow: #383e65 1px 1px 1px;
-  border: #f3c130 2px solid;
+  border: white 2px solid;
   padding: 10px 40px 10px 40px;
   border-radius: 16px;
   font-weight: bold;
@@ -88,7 +86,8 @@ code {
 .resources-area {
   text-shadow: #383e65 1px 1px 1px;
   color: white;
-  display: table-column-group;
+  display: flex;
+  flex-direction: column;
   margin-left: 1%;
   margin-right: 1%;
   
@@ -99,11 +98,6 @@ code {
   flex-direction: column;
   align-items: center;
   margin-left: 5%;
-}
-a {
-  color: white;
-  text-decoration: none;
-  text-shadow: #383e65 1px 1px 1px;
 }
 /* unvisited link */
 a:link {
@@ -120,35 +114,19 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-  color: #ff5851 ;
-}
-.news-feed-elements {
-  padding: 2%;
+  color: #4c4b1f;
 }
 
 /* selected link */
 a:active {
   color: #6287f8;
 }
-.res-area > a {
-  color:  white;
-
-}
-.res-area > a:hover {
-  color: #ff5851 ;
-
-}
-
-.resources-area > a:active {
-  color: #6287f8  ;
-
-}
 button:hover {
-  background-color: #ff5851 ;
-  /* background-image: linear-gradient(250deg, #fbf665 0%, #ff6e27 100%); */
+  background-color: #fbf665;
+  background-image: linear-gradient(250deg, #fbf665 0%, #ff6e27 100%);
   color: white;
   text-shadow: #383e65 1px 1px 1px;
-  border: #ff5851 2px solid;
+  border: white 2px solid;
   padding: 10px 40px 10px 40px;
   border-radius: 16px;
   font-weight: bold;
@@ -182,13 +160,14 @@ button:hover {
   }
 }
 
-.ticker-wrap {  
+.ticker-wrap {
+  
   position: fixed;
   bottom: 0;
   width: 100%;
   overflow: hidden;
   height: 4rem;
-  background-color: rgba(#1c1b20 , 0.9); 
+  background-color: rgba(#000, 0.9); 
   padding-left: 100%;
   box-sizing: content-box;
 }
@@ -237,18 +216,7 @@ button:hover {
   justify-content: center;
   align-items: center;
 }
-
-@media only screen and (min-width: 701px) and (max-width: 780px) {
-  .resources-area {
-    position: absolute;
-    top: 99%;
-    left: 0;
-    bottom: 0;
-  }
-
-}
-
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 780px) {
 
   .currency-converter {
     height: min-content;
@@ -257,9 +225,7 @@ button:hover {
   }
   .resources-area {
     margin-top: 2%;
-    display: flex;
-    flex-direction: row;
-    flex: 0.5;
+    display: block;
     align-items: center;
     height: min-content;
   }
@@ -269,8 +235,5 @@ button:hover {
   }
   .ticker-wrap {
     display: none;
-  }
-  .resources-area{
-    display: block;
   }
 }
