--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@ body {
 
 
 h2 {
-  text-shadow: 1px 1px 2px #383e65;
+  text-shadow: 1px 1px 2px #383e6585;
 }
 
 h3 {
   /* color: white; */
-  text-shadow: 1px 1px 1px #383e65;
+  text-shadow: 1px 1px 2px #383e6585;
 
 }
 
@@ -31,7 +31,7 @@ code {
   flex-direction: column;
   flex: 1;
   min-width: 200px;
-  text-shadow: #383e65 1px 1px 2px;
+  text-shadow: 1px 1px 2px #383e6585;
   color: white;
   padding: 2%;
   margin-left: 2%;
@@ -48,7 +48,7 @@ code {
   flex-direction: column;
   align-items: center;
   flex: 1;
-  text-shadow: #383e65 1px 1px 1px;
+  text-shadow: 1px 1px 2px #383e6585;
   color: white;
   padding: 5%;
   margin-left: 1%;
@@ -78,7 +78,7 @@ code {
   background-color: #f3c130 ;
   /* background-image: linear-gradient(160deg, #fbcd02 0%, #ff6e27 100%); */
   color: white;
-  text-shadow: #383e65 1px 1px 1px;
+  text-shadow: 1px 1px 2px #383e6585;
   border: #f3c130 2px solid;
   padding: 10px 40px 10px 40px;
   border-radius: 16px;
@@ -86,7 +86,7 @@ code {
   cursor: pointer;
 }
 .resources-area {
-  text-shadow: #383e65 1px 1px 1px;
+  text-shadow: 1px 1px 2px #383e6585;
   color: white;
   display: table-column-group;
   margin-left: 1%;
@@ -103,7 +103,7 @@ code {
 a {
   color: white;
   text-decoration: none;
-  text-shadow: #383e65 1px 1px 1px;
+  text-shadow: 1px 1px 2px #383e6585;
 }
 /* unvisited link */
 a:link {
@@ -147,7 +147,7 @@ button:hover {
   background-color: #ff5851 ;
   /* background-image: linear-gradient(250deg, #fbf665 0%, #ff6e27 100%); */
   color: white;
-  text-shadow: #383e65 1px 1px 1px;
+  text-shadow: 1px 1px 2px #383e6585;
   border: #ff5851 2px solid;
   padding: 10px 40px 10px 40px;
   border-radius: 16px;
@@ -213,13 +213,11 @@ button:hover {
 }
 
 .ticker__item {
-
   display: inline-block;
-
   padding: 0 2rem;
   font-size: 2rem;
-  color: #d3cd0f;
-  text-shadow: #00000018 1px 1px 1px;
+  color: #fff ;
+  text-shadow: 1px 1px 2px #383e6585;
 
 }
 /* added 5-28-22*/
