--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Open+Sans:wght@300;400&display=swap');
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
   * {
@@ -31,9 +32,11 @@
 body { 
   background-color: #1c1b20 ;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 200;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -56,12 +59,14 @@ code {
 }
 
 .news-feed {
+  font-weight: 200;
+  margin-top: 2%;
   display: flex;
   flex-direction: column;
   flex: 1;
   min-width: 200px;
   max-height: 75vh;
-  text-shadow: 1px 1px 2px #383e6585;
+  text-shadow: 2px 2px 4px #383e6585;
   color: white;
   padding: 2%;
   margin-left: 2%;
@@ -72,20 +77,31 @@ code {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 .currency-converter {
+  font-weight: 200;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
-  text-shadow: 1px 1px 2px #383e6585;
+  margin-top: 2%;
+  min-width: 280px;
+  max-height: 75vh;
+  text-shadow: 2px 2px 4px #383e6585;
   color: white;
-  padding: 5%;
-  overflow: auto;
+  padding: 2%;
+  overflow: hidden;
   margin-left: 1%;
   margin-right: 2%;
   border-radius: 16px;
   background-color: #414a6b ;
   /* background-image: linear-gradient(180deg, #6287f8 0%, #383e65 100%); */
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.titlebar {
+  /* background-color: #f3c130 ;   */
+  display: flex;
+  height: 90px;
+  width: 100%;
+  background-image: linear-gradient(135deg, #f3c130 0%, #ff575183 73%,  #f3c23000 97%);
 }
 .input-box {
   max-width: fit-content;
@@ -116,6 +132,7 @@ code {
   cursor: pointer;
 }
 .resources-area {
+  margin-top: 2%;
   text-shadow: 1px 1px 2px #383e6585;
   color: white;
   display: table-column-group;
@@ -157,6 +174,7 @@ a:hover {
 .news-feed-elements {
   padding: 2%;
   border: #1c1b202f 1px solid;
+  border-radius: 16px;
   overflow: scroll;
 
 }
